--- a/frontend/src/components/FoodItem/FoodItem.css
+++ b/frontend/src/components/FoodItem/FoodItem.css
@@ -5,13 +5,23 @@
     box-shadow: 0px 0px 10px #00000015;
     transition: 0.3s;
     animation: fadeIn 1s;
+    display: flex;
+    flex-direction: column;
+    height: 100%; /* Ensure all cards have same height */
 }
+
 .food-item:hover{
     transform: scale(1.02);
 }
+
 .food-item-img-container{
     position: relative;
+    width: 100%;
+    height: 200px; /* Fixed height for image container */
+    overflow: hidden;
+    border-radius: 15px 15px 0px 0px;
 }
+
 .food-item-img-container .add{
     width: 35px;
     position: absolute;
@@ -19,14 +29,21 @@
     right: 15px;
     cursor: pointer;
     border-radius: 50%;
+    z-index: 2;
 }
+
 .food-item-img-container .add:hover{
     border: 2px solid #FF4C24;
 }
+
 .food-item-image{
-   width: 100%;
-   border-radius: 15px 15px 0px 0px;
+    width: 100%;
+    height: 100%; /* Fill the container */
+    object-fit: cover; /* Crop image to maintain aspect ratio */
+    object-position: center; /* Center the image */
+    border-radius: 15px 15px 0px 0px;
 }
+
 .food-item-counter{
     position: absolute;
     bottom: 15px;
@@ -37,33 +54,47 @@
     padding: 6px;
     border-radius: 50px;
     background-color: white;
+    z-index: 2;
 }
+
 .food-item-counter img{
     width: 30px;
 }
+
 .food-item-info{
     padding: 20px;
+    flex-grow: 1; /* Allow info section to grow and fill remaining space */
+    display: flex;
+    flex-direction: column;
 }
+
 .food-item-name-rating{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
 }
+
 .food-item-name-rating p{
     font-size: 20px;
     font-weight: 500;
 }
+
 .food-item-name-rating img{
     width: 70px;
 }
+
 .food-item-desc{
     color: #676767;
     font-size: 12px;
+    flex-grow: 1; /* Allow description to take available space */
+    margin-bottom: 10px;
 }
+
 .food-item-price{
     color: #FF4C24;
     font-size: 22px;
     font-weight: 500;
-    margin: 10px 0px;
+    margin: 10px 0px 0px 0px; /* Remove bottom margin, add to top only */
+    margin-top: auto; /* Push price to bottom */
 }
